--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "expo": "~37.0.3",
     "expo-camera": "~8.2.0",
+    "expo-image-manipulator": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
